# tech-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md
.gitea/workflow/: rust.yml
.gitea/workflows/: container-bot.yml  container-database.yml  container-web.yml  container.yaml  container.yml  rust.yaml  rust.yml
.github/workflow/: container.yml
.github/workflows/: container.yml  rust.yml
bot/: Cargo.toml
bot/graphql/: query.graphql  schema.json
bot/src/: commands.rs  graphql.rs  main.rs
database/: Cargo.toml
database/src/: graphql.rs  main.rs
database/src/schema/: database.rs  mod.rs  mutation.rs  query.rs
frontend/: package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
frontend/src/: app.d.ts  app.html  hooks.server.ts
frontend/src/lib/: refreshToken.ts  toast.ts  types.ts
frontend/src/lib/components/: dropdown.svelte  toast.svelte
frontend/src/lib/components/inputs/: select.svelte  text.svelte
frontend/src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
frontend/src/routes/auth/callback/discord/: +server.ts
frontend/src/routes/auth/discord/: +page.server.ts  +server.ts
frontend/src/routes/auth/discord/callback/: +page.server.ts  +page.svelte  +page.ts
frontend/src/routes/login/: +page.svelte
frontend/src/routes/logout/: +page.server.ts  +server.ts
src/: commands.rs  database.rs  main.rs
