[package]
name = "tech-bot"
version = "0.1.0"
edition = "2021"
authors = ["Antoine Langlois <antoine.l@antoine-langlois.net>"]
description = "A Discord bot for the Tech channel"

[dependencies]
once_cell = "1.17.1"
poise = "0.5"
polodb_core = { path = "../PoloDB/src/polodb_core" }
# polodb_core = "4.2.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
