[package]
name = "tech-bot"
version = "0.1.0"
edition = "2021"
authors = ["Antoine Langlois <antoine.l@antoine-langlois.net>"]
description = "A Discord bot for the Tech channel"

[dependencies]
once_cell = "1.17"
poise = "0.5"
polodb_core = { path = "../PoloDB/src/polodb_core" }
regex = "1.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
url = "2.3"
