[package]
name = "bot"
version = "0.1.0"
edition = "2021"
authors = ["Antoine Langlois <antoine.l@antoine-langlois.net>"]
description = "Discord bot"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
graphql_client = { version = "0.13", features = ["reqwest"] }
poise = "0.5"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.179", features = ["derive"] }
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
url = "2.3"
uuid = { version = "1.4", features = ["v4", "serde"] }
