[package]
name = "database"
version = "0.1.0"
edition = "2021"
authors = ["Antoine Langlois <antoine.l@antoine-langlois.net>"]
description = "Database endpoint with GraphQL for tech-bot"

[dependencies]
actix-cors = "0.6"
actix-web = "4.3"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
env_logger = "0.10"
# until v0.16 is released, use master for uuid support
juniper = { git = "https://github.com/graphql-rust/juniper.git", features = [
  "uuid",
  "chrono",
] }
juniper_actix = "0.4.0"
log = "0.4"
polodb_core = { git = "https://github.com/DataHearth/PoloDB.git", branch = "fix/in-operator" }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.4", features = ["serde", "v4"] }
